--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
 
     <body id="home">
     </body>
+    <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
 
     <script>
 
