--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,27 +20,6 @@
     </body>
     <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
 
-    <script>
+    <script src="public/scripts.min.js"></script>
 
-      var config = {
-        apiKey: "AIzaSyAQB-SlAb9hmGTz9j1agLWogQkrbz-OvYw",
-        authDomain: "fuerza-lab.firebaseapp.com",
-        databaseURL: "https://fuerza-lab.firebaseio.com",
-        storageBucket: "fuerza-lab.appspot.com"
-      }
-
-      firebase.initializeApp(config)
-
-      // Get a reference to the database service
-      var database = firebase.database()
-
-      var users = database.ref()
-      const home = document.querySelector('#home')
-
-
-      users.on('value', function(snapshot) {
-        console.log(snapshot.val())
-      })
-
-    </script>
 </html>
