--- a/views/assets/stylesheets/base/_variables.scss
+++ b/views/assets/stylesheets/base/_variables.scss
@@ -13,8 +13,8 @@ $grid-unit : 10px;
 /*********************************************************************
 *  = Colors
 *********************************************************************/
-$WT : #FFF;
-$BG : #112030;
-$CL : #EBF3FF;
-$TR : #FE0E36;
+$c1 : #798DE2;
+$c2 : #6C80DC;
+$c3 : #E2F0F8;
+$c4 : #EEF0FB;
 $lightness :  $BG;
