--- a/views/assets/stylesheets/elements/_header.scss
+++ b/views/assets/stylesheets/elements/_header.scss
@@ -1,8 +1,8 @@
 
 .header{
   position: fixed;
-  top: 1vw;
-  left: 1vw;
+  top: 1vh;
+  margin: 0 2vw;
   z-index: 2;
   min-height: 70px;
   max-height: 90px;
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   padding: 2vw;
-  width: 98vw;
+  width: 96vw;
   height: 100;
   background-color: $c1;
   border-radius: 3px;
