--- a/views/assets/stylesheets/elements/_maintenance.scss
+++ b/views/assets/stylesheets/elements/_maintenance.scss
@@ -1,11 +1,18 @@
 section{
-  margin-top: 110px;
+  margin-top: 120px;
 }
+
+main{
+  max-width: 1020px;
+  margin: 0 auto;
+}
+
 .maintenance{
   position: relative;
-  margin: 0 2vw;
+  margin: 0 auto;
   padding:15px 2vw 17px;
   width: 96vw;
+  max-width: 100%;
   background-color: #fff;
   border-bottom: 1px solid lighten($c1,25%);
 
